# qa_guru_hw16_poetry

./: pyproject.toml
