[tool.poetry]
name = "qa-guru-poetry"
version = "0.1.0"
description = ""
authors = ["Firex18ru <Firex1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
selene = "2.0.0rc9"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
